--- a/force-app/main/default/classes/TaskService.cls
+++ b/force-app/main/default/classes/TaskService.cls
@@ -40,7 +40,8 @@ public without sharing class TaskService {
             'WhatId',
             'Task_Type__c',
             'Visible_For__c',
-            'Action_URL__c'
+            'Action_URL__c',
+            'Reminder_Date__c'
     };
     
     private static TaskService instance;
