--- a/force-app/main/default/classes/StudyDetailViewController.cls
+++ b/force-app/main/default/classes/StudyDetailViewController.cls
@@ -257,7 +257,7 @@ public without sharing class StudyDetailViewController {
                 tabs.add(new StudyTab(
                         'tab-resources',
                         'resources',
-                        TranslateHelper.getLabelValue('PG_SW_Tab_Visits'),
+                        TranslateHelper.getLabelValue('PG_SW_Tab_Resources'),
                         backHomeAction
                 ));
 
